--- a/car_manager/Base.lproj/Main.storyboard
+++ b/car_manager/Base.lproj/Main.storyboard
@@ -728,7 +728,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="O6s-s1-Qum">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O6s-s1-Qum">
                                 <rect key="frame" x="137.5" y="84" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="3Vk-3y-vNa"/>
@@ -786,7 +786,6 @@
                     </view>
                     <navigationItem key="navigationItem" title="我的信息" id="ycY-Q0-8f7"/>
                     <connections>
-                        <outlet property="InfoTableview" destination="lQz-BX-HBZ" id="TbQ-73-fW7"/>
                         <outlet property="LogoutButton" destination="nzb-nb-zcb" id="kI7-iw-dhw"/>
                         <outlet property="UserNum" destination="cCe-wS-O9h" id="SrR-Ow-i6Y"/>
                         <outlet property="UserPost" destination="tZD-9x-TUX" id="g54-gb-bag"/>
@@ -795,7 +794,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OQg-t2-Av1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2703.1999999999998" y="134.48275862068968"/>
+            <point key="canvasLocation" x="2702" y="134"/>
         </scene>
         <!--查询-->
         <scene sceneID="vvh-7H-XLI">
@@ -836,7 +835,4 @@
             <point key="canvasLocation" x="1764" y="134.48275862068968"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Avatar" width="200" height="200"/>
-    </resources>
 </document>
