--- a/car_manager/Base.lproj/Main.storyboard
+++ b/car_manager/Base.lproj/Main.storyboard
@@ -253,13 +253,13 @@
                                                     <rect key="frame" x="38" y="99" width="329" height="20"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="车辆种类:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mm-2s-K7W">
-                                                            <rect key="frame" x="0.0" y="0.0" width="110" height="20"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="109.5" height="20"/>
                                                             <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ft8-xb-htK">
-                                                            <rect key="frame" x="110" y="0.0" width="219" height="20"/>
+                                                            <rect key="frame" x="109.5" y="0.0" width="219.5" height="20"/>
                                                             <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -465,6 +465,24 @@
             </objects>
             <point key="canvasLocation" x="2701.5999999999999" y="1648.4257871064469"/>
         </scene>
+        <!--My Info View Controller-->
+        <scene sceneID="WPe-bL-0Ip">
+            <objects>
+                <viewController id="FiN-Y4-GFV" customClass="MyInfoViewController" customModule="car_manager" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bjQ-bv-tpm"/>
+                        <viewControllerLayoutGuide type="bottom" id="kW3-KY-Hht"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xQj-8B-XQs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iSU-6O-isW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2702" y="134"/>
+        </scene>
         <!--Person Search Table View Controller-->
         <scene sceneID="93h-oZ-0uM">
             <objects>
@@ -621,13 +639,13 @@
                                                     <rect key="frame" x="8" y="11.5" width="359" height="21"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="人员车辆信息:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sq2-Aq-cQ6">
-                                                            <rect key="frame" x="0.0" y="0.0" width="120" height="21"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="119.5" height="21"/>
                                                             <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e9j-b5-5oi">
-                                                            <rect key="frame" x="120" y="0.0" width="239" height="21"/>
+                                                            <rect key="frame" x="119.5" y="0.0" width="239.5" height="21"/>
                                                             <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -724,6 +742,9 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="FiN-Y4-GFV" kind="show" id="9Qw-oV-iqX"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZPJ-NZ-qKq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
