--- a/car_manager/Base.lproj/Main.storyboard
+++ b/car_manager/Base.lproj/Main.storyboard
@@ -465,7 +465,7 @@
             </objects>
             <point key="canvasLocation" x="2701.5999999999999" y="1648.4257871064469"/>
         </scene>
-        <!--My Info View Controller-->
+        <!--我的信息-->
         <scene sceneID="po5-EY-1QM">
             <objects>
                 <viewController id="a41-Qa-Gbl" customClass="MyInfoViewController" customModule="car_manager" customModuleProvider="target" sceneMemberID="viewController">
@@ -476,13 +476,110 @@
                     <view key="view" contentMode="scaleToFill" id="lwW-MR-bMg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TMh-bH-WU0">
+                                <rect key="frame" x="137" y="84" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="VTR-PY-AGU"/>
+                                    <constraint firstAttribute="width" constant="100" id="hhw-ah-F6y"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dlD-aE-Kz5">
+                                <rect key="frame" x="16" y="204" width="343" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Qg-LC-S5s">
+                                        <rect key="frame" x="0.0" y="0.0" width="171.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Us1-LO-ZMc">
+                                        <rect key="frame" x="171.5" y="0.0" width="171.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="8zK-m7-NI4"/>
+                                    <constraint firstItem="6Qg-LC-S5s" firstAttribute="width" secondItem="Us1-LO-ZMc" secondAttribute="width" id="Ho1-C8-eoC"/>
+                                </constraints>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JyK-il-7m1">
+                                <rect key="frame" x="16" y="234.5" width="343" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="gLe-ZZ-esJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JCE-ua-FPa">
+                                <rect key="frame" x="16" y="568" width="343" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="0kE-2n-HIj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
+                                <state key="normal" title="注        销">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dd1-8E-htd">
+                                <rect key="frame" x="0.0" y="264.5" width="375" height="293.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FunctionCell" id="wvr-ZP-OVf">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wvr-ZP-OVf" id="Mmz-qU-5zX">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="a41-Qa-Gbl" id="vQk-kL-ymT"/>
+                                    <outlet property="delegate" destination="a41-Qa-Gbl" id="wXo-NV-wck"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TMh-bH-WU0" firstAttribute="top" secondItem="1Hi-fC-1oK" secondAttribute="bottom" constant="20" id="0XI-Fa-q17"/>
+                            <constraint firstItem="JyK-il-7m1" firstAttribute="leading" secondItem="lwW-MR-bMg" secondAttribute="leadingMargin" id="BUo-pt-mBe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JCE-ua-FPa" secondAttribute="trailing" id="Rdn-1O-zg6"/>
+                            <constraint firstItem="Dd1-8E-htd" firstAttribute="leading" secondItem="lwW-MR-bMg" secondAttribute="leading" id="Sga-tK-co1"/>
+                            <constraint firstItem="5kB-PL-PCk" firstAttribute="top" secondItem="JCE-ua-FPa" secondAttribute="bottom" constant="10" id="YF7-8l-VWU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JyK-il-7m1" secondAttribute="trailing" id="YGz-xF-PcC"/>
+                            <constraint firstItem="dlD-aE-Kz5" firstAttribute="leading" secondItem="lwW-MR-bMg" secondAttribute="leadingMargin" id="bEg-0b-hXq"/>
+                            <constraint firstItem="TMh-bH-WU0" firstAttribute="centerX" secondItem="lwW-MR-bMg" secondAttribute="centerX" id="cN6-Yy-gPq"/>
+                            <constraint firstItem="JCE-ua-FPa" firstAttribute="top" secondItem="Dd1-8E-htd" secondAttribute="bottom" constant="10" id="dfv-Qp-cMU"/>
+                            <constraint firstItem="dlD-aE-Kz5" firstAttribute="top" secondItem="TMh-bH-WU0" secondAttribute="bottom" constant="20" id="lnE-pR-VgL"/>
+                            <constraint firstAttribute="trailing" secondItem="Dd1-8E-htd" secondAttribute="trailing" id="plQ-qJ-EA4"/>
+                            <constraint firstItem="JyK-il-7m1" firstAttribute="top" secondItem="dlD-aE-Kz5" secondAttribute="bottom" constant="10" id="ptS-Z6-CTx"/>
+                            <constraint firstItem="JCE-ua-FPa" firstAttribute="leading" secondItem="lwW-MR-bMg" secondAttribute="leadingMargin" id="qv3-fd-oTZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dlD-aE-Kz5" secondAttribute="trailing" id="xRe-Q5-AQp"/>
+                            <constraint firstItem="Dd1-8E-htd" firstAttribute="top" secondItem="JyK-il-7m1" secondAttribute="bottom" constant="10" id="zgP-Jx-ikc"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="7UD-B7-bXh"/>
+                    <navigationItem key="navigationItem" title="我的信息" id="7UD-B7-bXh"/>
+                    <connections>
+                        <outlet property="FunctionTable" destination="Dd1-8E-htd" id="YJT-H2-kE4"/>
+                        <outlet property="LogoutButton" destination="JCE-ua-FPa" id="VHF-gh-uXS"/>
+                        <outlet property="UserImage" destination="TMh-bH-WU0" id="JZ8-P0-eIF"/>
+                        <outlet property="UserName" destination="6Qg-LC-S5s" id="XRJ-V1-jyj"/>
+                        <outlet property="UserNum" destination="Us1-LO-ZMc" id="dOr-Wd-wu3"/>
+                        <outlet property="UserPost" destination="JyK-il-7m1" id="3D8-LU-Jy5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="htG-Xr-TEL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2702" y="135"/>
+            <point key="canvasLocation" x="2701.5999999999999" y="134.48275862068968"/>
         </scene>
         <!--Person Search Table View Controller-->
         <scene sceneID="93h-oZ-0uM">
